# fund-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CODEWIKI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-alignment.md  code-is-cheap-analysis.md  code_20260519.csv  current-startup-packet.md  dayu-agent-audit-analysis.md  design-control-alignment-guide.md  design-md-v22-changes.md  design-update.md  design.md  docling-architecture-reorientation-20260617.md  fund-agent-audit-20260521---b5101bb0-fa2d-4904-8c83-0bbf25c82334.md  fund-agent-mvp-plan.md  fund-analysis-research-notes.md  fund-analysis-template-draft.md  golden-answer-instructions.md  golden-answer-template.md  implementation-control-p4.md  implementation-control-update.md  implementation-control.md  p19-phase-definition.md  p19-thermometer-technical-proposal.md  p4-plan-review-20260519.md  p4-s2-manual-actions-20260519.md  post-mvp-p4-first-principles-plan.md  repo-audit-20260519.md  repo-audit-20260520.md  repo-audit-20260522.md  sample-funds.md  source-document-standards.md
docs/20260430/: ARCH.md  PONYFORGE_LESSONS.md  PRD.md  RESEARCH.md  刘成岗AI学习历程与大愚Agent研究.md
docs/audit/: fund-agent-repo-deepreview-20260610.md
docs/reviews/: accepted-slice-repo-deepreview-audit-type-guards-20260523.md  agentds-repo-deepreview-20260523.md  agentglm-repo-deepreview-20260523.md  agents-rules-truth-sync-review-controller-judgment-20260615.md  aggregate-deepreview-repo-deepreview-audit-type-guards-ds-20260523.md  aggregate-fix-repo-deepreview-audit-type-guards-20260523.md  aggregate-rereview-repo-deepreview-audit-type-guards-ds-20260523.md  annual-report-docling-parser-discussion-summary-20260613.md  annual-report-document-representation-docling-benchmark-plan-20260614.md  annual-report-document-representation-docling-benchmark-plan-controller-judgment-20260614.md  annual-report-document-representation-docling-benchmark-plan-review-ds-20260614.md  annual-report-document-representation-docling-benchmark-plan-review-mimo-20260614.md  annual-report-source-strategy-reconciliation-20260520.md  audit-disposition-phaseflow-reconciliation-controller-judgment-20260610.md  bounded-same-report-eid-html-render-discovery-controller-judgment-20260615.md  bounded-same-report-eid-html-render-discovery-evidence-20260615.md  bounded-same-report-eid-html-render-discovery-evidence-review-ds-20260615.md  bounded-same-report-eid-html-render-discovery-evidence-review-mimo-20260615.md  code-rereview-investor-experience-source-truth-mimo-20260620.md  code-rereview-repo-deepreview-audit-type-guards-slice-ab-mimo-20260523.md  code-review-20260517-0727.md  code-review-20260518-0547.md  code-review-20260518-2223.md  code-review-20260520-0350.md  code-review-20260520-125906.md  (+4114 more)
fund_agent/: README.md
scripts/: controlled_live_eid_failure_branch_observation.py  evidence_confirm_ec_p2_live_sample.py  report_quality_eval.py  selected_funds_smoke.py
tests/: README.md  test_repo_hygiene.py
(+320 files in other folders)
